<resources>
    <string name="app_name">App</string>
    <string name="home_page">Home</string>
    <string name="ticket_page">Tickets</string>
    <string name="map_page">Routes Map</string>
    <string name="qrcode_page">QR Code</string>
    <string name="wallet_page">Wallet</string>
    <string name="home">This is a Home Page</string>
    <string name="map">This is a Map Page</string>
    <string name="your_ticket_message">Your Tickets</string>
    <string name="more_ticket_page_message">No tickets have been purchased yet</string>
    <string name="qrcode_big_message">Pass the QR Code through the Bus scanner to buy the ticket</string>
    <string name="bus_description">Bus_Logo</string>
    <string name="person_without_description">Person_Without_Logo</string>
    <string name="close_icon_description">Close_Page</string>
    <string name="busIn_text">BusIn</string>
    <string name="schedules_text">See schedules</string>
    <string name="from_text">From</string>
    <string name="to_text">To</string>
    <string name="departure_text">Departure</string>
    <string name="return_text">Return</string>
    <string name="from_text_placeholder">Universidade-Reitoria</string>
    <string name="to_text_placeholder">Forum</string>
    <string name="departure_text_placeholder">16/05/2024</string>
    <string name="return_text_placeholder">If you want</string>
    <string name="minimessage_text">Only see schedules without login</string>
    <string name="view_schedules">View Schedules</string>
    <string name="clear_button">Clear all info</string>
    <string name="wallet_text">Your money: </string>
    <string name="wallet">Wallet</string>
    <string name="pay_button">Add Funds</string>
    <string name="quantity_placeholder">0€</string>
    <string name="click_here_for_buy_ticket_page_message">Click here to buy</string>
    <string name="buy_ticket">Buy Tickets</string>
    <string name="add_funds_message"><u>Add funds</u></string>
    <string name="phone_number">Phone Number</string>
    <string name="amount">Amount</string>
    <string name="select_payment_method">Select a payment method:</string>
    <string name="mb_way">MB Way</string>
    <string name="multibanco">Multibanco</string>
    <string name="email">E-mail</string>
    <string name="reference">Reference:   123 456 789</string>
    <string name="entity">Entity:            12345</string>
    <string name="navigation_drawer_open">Abrir Navegação</string>
    <string name="navigation_drawer_close">Fechar navegação</string>
    <string name="univ_reitor">Univ-Reitoria</string>
    <string name="for_m">Forúm</string>

</resources>