<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wallet.WalletFragment">
    <FrameLayout
        android:id="@+id/wallet_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".wallet.WalletFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="40dp"
            android:text="@string/wallet"
            android:textSize="36sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/walletBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240sp"
            android:layout_marginTop="107dp"
            android:text="@string/quantity_placeholder"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="25sp"
            android:text="@string/wallet_text"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="170sp"
            android:text="@string/add_funds_message"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/select_payment_method"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/accordion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="220dp">
        </LinearLayout>

    </FrameLayout>
</ScrollView>