<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_toolbar_with_login"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="@color/my_primary">

    <!-- Bus logo -->
    <ImageView
        android:id="@+id/toolbar_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:contentDescription="@string/bus_description"
        android:padding="0dp"
        android:src="@mipmap/ic_bus_foreground" />

    <!-- Title -->
    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/busIn_text"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <!-- Icon for person without login-->
    <ImageButton
        android:id="@+id/logo_for_person_with_logo"
        android:layout_width="55dp"
        android:layout_height="80dp"
        android:layout_gravity="end"
        android:contentDescription="@string/person_without_description"
        android:padding="0dp"
        android:layout_marginEnd="25dp"
        android:src="@mipmap/ic_person_for_login_foreground"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:onClick="onClickImageButton"/>

</androidx.appcompat.widget.Toolbar>