<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ticket.TicketFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/your_ticket_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_ticket_message"
            android:textSize="36sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/ticket_more_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_ticket_page_message"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/ticket_logo_image"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@mipmap/ic_without_tickets_foreground"
                android:layout_gravity="center_horizontal"
                    app:tint="@color/gray_for_ticket" />

            <ImageView
                android:id="@+id/red_cross_image"
                android:layout_width="167dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-177dp"
                android:src="@mipmap/ic_red_cross_without_tickets_foreground" />
        </LinearLayout>

        <TextView
            android:id="@+id/ticket_click_here_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here_for_buy_ticket_page_message"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="440dp"
            android:textColor="@android:color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="600dp"
            android:backgroundTint="@color/my_primary"
            android:text="@string/buy_ticket">


        </Button>

    </FrameLayout>
</ScrollView>