<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ticket.TicketFragment">

    <TextView
        android:id="@+id/your_ticket_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_ticket_message"
        android:textSize="36sp"
        android:layout_gravity="top|center"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <View
        android:id="@+id/rectangle_1"
        android:layout_width="389dp"
        android:layout_height="93dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rectangle_1"
        android:layout_marginTop="121dp"/>

    <TextView
        android:id="@+id/univ_reitor"
        android:layout_width="129dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="133dp"
        android:text="@string/univ_reitor"
        android:textSize="17sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/for_m"
        android:layout_width="85dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="314dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="133dp"
        android:text="@string/for_m"
        android:textSize="17sp"
        android:textStyle="bold"
        android:gravity="right|center_vertical"
        android:textColor="@android:color/black"/>

</FrameLayout>