<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/my_toolbar_with_cart"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="@color/my_primary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    app:titleTextColor="@android:color/white">

    <!-- Bus logo -->
    <ImageView
        android:id="@+id/toolbar_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:contentDescription="@string/bus_description"
        android:padding="0dp"
        android:src="@mipmap/ic_bus_foreground" />

    <!-- Title -->
    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/busIn_text"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <!-- Icon for person without login-->
    <ImageButton
        android:id="@+id/logo_for_person_with_logo"
        android:layout_width="55dp"
        android:layout_height="80dp"
        android:layout_gravity="end"
        android:contentDescription="@string/person_without_description"
        android:padding="0dp"
        android:layout_marginEnd="10dp"
        android:src="@mipmap/ic_person_for_login_foreground"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:onClick="onClickImageButton"/>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:padding="4dp"
        android:layout_marginEnd="13dp">

        <ImageButton
            android:id="@+id/logo_for_cart_buy_ticket"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="cart_buy_ticket"
            android:padding="0dp"
            android:layout_marginTop="11dp"
            android:src="@mipmap/ic_cart_buy_tickets_foreground"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"/>

        <TextView
            android:id="@+id/cartItemCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/logo_for_cart_buy_ticket"
            android:layout_marginStart="-13dp"
            android:background="@drawable/circle_background"
            android:gravity="center"
            android:text="0"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_marginTop="2dp"/>

    </RelativeLayout>

</androidx.appcompat.widget.Toolbar>